<resources>
    <string name="app_name" translatable="false">GameStop</string>
    <string name="home">Home</string>
    <string name="photo">Photo</string>
    <string name="album">Album</string>
    <string name="setting">Setting</string>
    <string name="permission">Permission</string>
    <string name="go">Go</string>
    <string name="content_permission">\u0022PhotoGallery\u0022 requires permission to use the device’s storage.</string>
    <string name="storage">Storage</string>
    <string name="camera">Camera</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="hindi">Hindi</string>
    <string name="portuguese">Portuguese</string>
    <string name="next">Next</string>
    <string name="title_intro_first">Explore and Organize</string>
    <string name="title_intro_second">Unveil with Elegance</string>
    <string name="title_intro_third">Security and Privacy</string>
    <string name="content_intro_first">Create albums as unique as your experiences</string>
    <string name="content_intro_second">Your photos deserve to be showcased in all their glory</string>
    <string name="content_intro_third">Your memories are precious, and so is your privacy</string>
    <string name="language">Language</string>
    <string name="view_all">View all</string>
    <string name="library">Libraries</string>
    <string name="favourite">Favourite</string>
    <string name="string_private">Private</string>
    <string name="albums">Albums</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="current_pin">Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="new_album">New album</string>
    <string name="enter_a_name_for_this_album">Enter a name for this album</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="create_password">Create password</string>
    <string name="enter_a_password_for_security">Enter a password for security.</string>
    <string name="password">Password</string>
    <string name="create_pin">Create PIN</string>
    <string name="enter_pin_for_security">Enter PIN for security.</string>
    <string name="pin">PIN</string>
    <string name="string_delete_photo">Do you want to delete this photos?</string>
    <string name="delete">Delete</string>
    <string name="rename_album">Rename album</string>
    <string name="enter_new_name_for_this_album">Enter new name for this album</string>
    <string name="album_name">Album name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="current_pass">Current password</string>
    <string name="new_password">New password</string>
    <string name="please_enter_album_name">Please enter album name</string>
    <string name="old_password_cannot_be_empty">Old password cannot be empty.</string>
    <string name="new_password_cannot_be_empty">New password cannot be empty.</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="pin_cannot_be_empty">PIN cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_cannot_contain_spaces">Password cannot contain spaces</string>
    <string name="string_announce_lock">Your pattern password was created. Do you want to create again?</string>
    <string name="remove">Remove</string>
    <string name="create_album">Create Album</string>
    <string name="select_all">Select all</string>
    <string name="unselect">Unselect</string>
    <string name="layout">Layout</string>
    <string name="sort">Sort</string>
    <string name="select">Select</string>
    <string name="two_grid">2 Grid</string>
    <string name="three_grid">3 Grid</string>
    <string name="no_photos_have_been_selected_yet">No photos have been selected yet</string>
    <string name="delete_successfully">Delete successfully!</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="failed_to_create_album">Failed to create album</string>
    <string name="cannot_find_album">Cannot find album</string>
    <string name="failed_to_move_photo">Failed to move photo</string>
    <string name="create_album_successfully">Create album successfully</string>
    <string name="file_not_found">File not found</string>
    <string name="deleted">Deleted!</string>
    <string name="language_options">Language Options</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="information">Information</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="path">Path</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="unable_to_calculate_the_size_of_this_file">Unable to calculate the size of this file</string>
    <string name="done">Done</string>
    <string name="all_photos">All photos</string>
    <string name="no_photos_has_been_selected_yet">No photos has been selected yet.</string>
    <string name="pattern">Pattern</string>
    <string name="text">Text</string>
    <string name="string_remove_photo">Do you want to remove from this album</string>
    <string name="create_pattern_password">Create pattern password</string>
    <string name="old_password_incorrect">Old password incorrect</string>
    <string name="this_password_not_available">This password not available</string>
    <string name="this_password_not_the_same_before">This password not the same before</string>
    <string name="input_lock_again">You entered incorrectly too many times, please re-enter</string>
    <string name="pattern_password_successfully">Pattern was created. Please tap confirm to save password</string>
    <string name="created_new_pattern_password">Created new pattern password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="enter_your_pattern_password_you_want">Enter your pattern password you want</string>
    <string name="pattern_lock">Pattern lock</string>
    <string name="no_items_have_been_selected_yet">No items have been selected yet</string>
    <string name="remove_successfully">Remove successfully</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="let_us_know_your_experience">Let us know your experience</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="oh_no">Oh, no!</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="we_love_u_too">We love you too!</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="please_feedback">Please feedback</string>
    <string name="thank_you">Thank you</string>
    <string name="make_private">Make private</string>
    <string name="create_pattern_password_successfully">Create pattern password successfully</string>
    <string name="pattern_password_has_not_been_created">Pattern password has not been created</string>
    <string name="enter_password">Enter password</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="please_enter_pin">Please enter your PIN</string>
    <string name="pin_incorrect">PIN incorrect</string>
    <string name="cannot_make_this_album_to_private">Cannot make this album to private</string>
    <string name="private_albums">Private albums</string>
    <string name="make_public">Make public</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="make_public_successfully">Make public successfully!</string>
    <string name="make_public_failed">Make public failed</string>
    <string name="make_private_successfully">Make private successfully</string>
    <string name="cannot_create_public_folder">Cannot create public folder</string>
    <string name="no_items_selected">No items selected</string>
    <string name="public_folder_not_found">Public folder not found</string>
    <string name="make_public_album">Make public album</string>
    <string name="nothing_changes">Nothing changes</string>
    <string name="the_album_already_exist">The album already exist</string>
    <string name="change_password">Change password</string>
    <string name="change_private_method">Change private method</string>
    <string name="old_pin_cannot_be_empty">Old PIN cannot be empty</string>
    <string name="new_pin_cannot_be_empty">New PIN cannot be empty</string>
    <string name="seachin_photos_video_albums">Search in photos, videos, albums</string>
    <string name="recent">Recent</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="cannot_contain_special_character">Cannot contain special character</string>
    <string name="label_brush">Brush</string>
    <string name="label_text">Text</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="label_shape">Shape</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_filter">Filter</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="password_must_be_greater_than_5_character">Password must be greater than 5 characters</string>
    <string name="no_found_item">"No result found for</string>
    <string name="delete_album">Delete Album</string>
    <string name="no_items_can_be_selected">No items can be selected</string>
    <string name="security_question">Security Question</string>
    <string name="your_answer">Your answer</string>
    <string name="string_content_security">Answer security question to make private.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="answer_security_question_to_reset_password">Answer security question to reset password.</string>
    <string name="question_security">What were you born in?</string>
    <string name="please_enter_your_answer">Please enter your answer</string>
    <string name="the_answer_is_not_correct">The answer is not correct.</string>
    <string name="enter_new_password">Please enter your new password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="password_has_been_reset">Password has been reset.</string>
    <string name="this_is_sample_file">This is sample file.</string>
    <string name="create_pin_successfully">Create PIN successfully</string>
    <string name="create_password_successfully">Create password successfully</string>
    <string name="string_reset_pin">PIN incorrect. You can go to settings to reset PIN.</string>
    <string name="string_reset_password">Password incorrect. You can go to settings to reset password</string>
    <string name="settings">Settings</string>
    <string name="opacity">Opacity</string>
</resources>