<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/selector_home"
        android:title="@string/home"
        app:cnb_iconColor="#DB7A30"/>

    <item
        android:id="@+id/menu_photo"
        android:icon="@drawable/selector_photo"
        android:title="@string/photos"
        app:cnb_iconColor="#DB7A30"/>

    <item
        android:id="@+id/menu_album"
        android:icon="@drawable/selector_album"
        android:title="@string/albums"
        app:cnb_iconColor="#DB7A30"/>
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/selector_setting"
        android:title="@string/settings"
        app:cnb_iconColor="#DB7A30"/>
</menu>