<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_F2F2F2"
        >

        <com.example.base_app.ui.widget.WidgetToolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mToolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            >

            <TextView
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="@dimen/_16sdp"
                android:text="@string/language_options"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:drawableStartCompat="@drawable/ic_lang_setting"
                app:drawableEndCompat="@drawable/ic_arrow_next_setting_item" />

            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="@dimen/_16sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:drawableStartCompat="@drawable/ic_lock_forgot_pass"
                app:drawableEndCompat="@drawable/ic_arrow_next_setting_item" />

            <TextView
                android:id="@+id/rate_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="@dimen/_16sdp"
                android:text="@string/rate_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:drawableStartCompat="@drawable/ic_rate_setting"
                app:drawableEndCompat="@drawable/ic_arrow_next_setting_item" />

            <TextView
                android:id="@+id/privacy_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="@dimen/_16sdp"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:drawableStartCompat="@drawable/ic_policy_setting"
                app:drawableEndCompat="@drawable/ic_arrow_next_setting_item" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>