<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_permission"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_bold"
                style="@style/text_size_20sp_bold"
                android:text="@string/permission"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:fontFamily="@font/notosans_medium"
                android:text="@string/go"
                android:elevation="0dp"
                android:visibility="gone"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:textColor="@color/color_DB7A30"
                style="@style/text_size_16sp_medium"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_permission"
            android:layout_width="151.88dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27dp"
            android:src="@drawable/ic_permission" />

        <TextView
            android:id="@+id/description_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/content_permission"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_storage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/storage"
                android:textColor="@color/black"
                android:fontFamily="@font/notosans_bold"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_camera"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center_vertical"-->
<!--                android:text="@string/camera"-->
<!--                android:textColor="@color/black"-->
<!--                android:fontFamily="@font/notosans_bold"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold" />-->

<!--            <androidx.appcompat.widget.SwitchCompat-->
<!--                android:id="@+id/switch2"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:thumb="@drawable/bg_thumb"-->
<!--                app:track="@drawable/bg_track"-->
<!--                tools:ignore="UseSwitchCompatOrMaterialXml" />-->
<!--        </LinearLayout>-->

    </LinearLayout>
</layout>