<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardBackgroundColor="@color/white"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_12sdp"
            android:paddingTop="@dimen/_12sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingHorizontal="5dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:id="@+id/imgIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:elevation="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:srcCompat="@drawable/rating_default" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/app_font_bold"
                    android:gravity="center"
                    android:maxLines="2"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/do_you_like_the_app"
                    android:textColor="@color/color_252932"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/let_us_know_your_experience"
                    android:textColor="@color/color_8B93A7"
                    android:textSize="@dimen/_14ssp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.willy.ratingbar.ScaleRatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srb_clearRatingEnabled="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:srb_clickable="true"
                        app:srb_drawableEmpty="@drawable/star_normal"
                        app:srb_drawableFilled="@drawable/star_click"
                        app:srb_isIndicator="false"
                        app:srb_minimumStars="0"
                        app:srb_starPadding="5dp"
                        app:srb_numStars="5"
                        app:srb_rating="0"
                        app:srb_scrollable="true"
                        app:srb_starHeight="50dp"
                        app:srb_starWidth="50dp"
                        app:srb_stepSize="1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnRate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_rate_us"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/rate"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLater"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:fontFamily="@font/inter_bold"
                        android:maxLines="1"
                        android:text="@string/exit"
                        android:textAllCaps="false"
                        android:textColor="#24282D"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
</layout>